SF Primes/src/objects/IS_Product__c.object
<CustomObject>
    <description>Inside Sales product list</description>
    <fields>
        <fullName>Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Inside Sales</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISR_Group__c</fullName>
        <label>ISR Group</label>
        <picklist>
            <picklistValues>
                <fullName>G1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>IS Product</label>
    <listViews>
        <fullName>Active_Products</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>ISR_Group__c</columns>
        <columns>Family__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Family__c</columns>
        <columns>IsActive__c</columns>
        <columns>ISR_Group__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>IS Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IS Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>